--- a/templates/components/common/custom-home-content-categ.html
+++ b/templates/components/common/custom-home-content-categ.html
@@ -21,7 +21,7 @@
 <div class="shob-by-categ">
     <h1>SHOP BY CATEGORY</h1>
     
-    <div class="row shop-categ">
+    <div class="row shop-categ to-hide">
     
         
         <div class="col-lg-4 col-md-4 col-sm-4 px-2"><a href="/portable-scooters/"><img src="https://cdn11.bigcommerce.com/s-h7ti6c9310/stencil/0fbdd750-6e7a-0136-6996-71bd3cb7e197/e/435f9b30-2057-0137-158b-0242ac110019/img/loading.svg" class="lazyload" data-src="https://cdn11.bigcommerce.com/s-vz6unvhe9k/product_images/uploaded_images/01-heavyduty-scooter-img.png"></a></div>
