--- a/assets/scss/aoc-mobile.scss
+++ b/assets/scss/aoc-mobile.scss
@@ -443,7 +443,7 @@
         display: none;
     }
     div#mobile-header-num {
-        display: block !important;
+        display: block;
         margin: 3% 0;
     }
     div#mobile-header-num span {
