--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -26,7 +26,7 @@
                         <span class="header-logo-text">{{settings.store_logo.title}}</span>
                     {{/if}}
                 </a>
-                <div class="talk-live-header" id="mobile-header-num" style="display:none;">
+                <div class="talk-live-header" id="mobile-header-num" >
                     <span>Call us: </span><a onclick="gtag_report_conversion()" href="tel:1800-997-3077">1-800-997-3077</a>
                     <span>for SPECIAL <br> OFFERS on Mobility Scooters!</span>
                 </div>
